<resources>
    <string name="app_name">AAA Hear Here Prototype</string>
    <string name="title_activity_maps">Maps Activity</string>
    <string name="title_activity_main">AAA Hear Here Prototype</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="search_hint">Search for artists</string>
    <string name="title_activity_searchable">Searchable Activity</string>
    <string name="title_activity_search_results">Search Results Activity</string>

    <string name="facebook_app_id">966494340087272</string>
    <string name="fb_login_protocol_scheme">fb966494340087272</string>

    <string name="no_location_data_provided">No location data provided</string>
    <string name="service_not_available">Service not available</string>
    <string name="invalid_lat_long_used">Invalid Latitude and/or Longitude</string>
    <string name="no_address_found">No Address Found</string>
    <string name="address_found">Address Found</string>
    <string name="no_geocoder_available">No Geocoder Available</string>
    <string name="web_client_id">309766108839-mgshbchl5l2ue610pjnc5cja5eeejoes.apps.googleusercontent.com</string>
    <string name="client_id_android">309766108839-jnep7jmtn48cl16ge39ucs5991bkkqlp.apps.googleusercontent.com</string>

    <string name="home_fragment_title">Home fragment</string>
    <string name="map_fragment_title">Map fragment</string>
    <string name="post_fragment_title">Post fragment</string>
    <string name="profile_fragment_title">Profile fragment</string>
    <string name="open_drawer">Open drawer</string>
    <string name="close_drawer">Close drawer</string>
    <string name="action_reset_databse">Reset Databse</string>
    <string name="action_create_post">Post</string>
    <string name="placeholder_place_name">Place Name</string>
    <string name="address_picker_location">Location:</string>
    <string name="placholder_artist_desc">TextView</string>
    <string name="placholder_facebook_sign_in">FACEBOOK SIGN IN</string>
    <string name="address_picker_txtLocation_hint">Enter Location</string>
    <string name="placholder_num_likes">100</string>
    <string name="placholder_continue">Continue</string>
    <string name="placeholder_user_name">USER NAME</string>
    <string name="list_row_comment_add_txtAddComment_hint">Add your comment…</string>
    <string name="placeholder_likers">Likers</string>
    <string name="address_picker_street">Street:</string>
    <string name="placeholder_message">Message</string>
    <string name="placeholder_location">Location</string>
    <string name="placeholder_shortcut">Shortcut</string>
    <string name="address_picker_txtStreet_hint">Enter Street</string>
    <string name="placeholder_date">DATE</string>
    <string name="address_picker_locality">Locality:</string>
    <string name="address_picker_txtLocality_hint">Enter Locality</string>
    <string name="placeholder_track_name">Song Title</string>
    <string name="placeholder_artist_name">Artist Name</string>
    <string name="address_picker_country">Country:</string>
    <string name="address_picker_txtCountry_hint">Enter Country</string>
    <string name="placeholder_album_name">Album Name</string>
    <string name="placeholder_comment">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent et felis tempus, gravida dui id, pulvinar turpis. In tincidunt, quam at faucibus tincidunt, quam magna viverra ipsum, at ornare sem tortor convallis est. Mauris posuere vestibulum tortor id ornare.</string>
    <string name="fragment_post_txtMessage_hint">Leave a message</string>
    <string name="placeholder_tags">Tags go here</string>
    <string name="placeholder_login_failed">LOGIN FAILED</string>
    <string name="placeholder_logged_out">Logged Out</string>
    <string name="placeholder_message_map">Message: %1$s</string>
    <string name="placeholder_date_map">Posted: %1$s</string>

    <string name="navigation_option_home">Home</string>
    <string name="navigation_option_map">Map</string>
    <string name="navigation_option_profile">Profile</string>
    <string name="navigation_option_user_profile">User Profile: %1$s</string>
    <string name="navigation_option_settings">Settings</string>
    <string name="action_user_requests">Follow Requests</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_friends">Facebook Friends</string>
    <string name="action_search_users">Search Users</string>
    <string name="navigation_post_test">navigation_map_test</string>
    <string name="contentDescription_album_artwork">Album Artwork</string>
    <string name="contentDescription_user_profile_picture">User Profile Picture</string>
    <string name="contentDescription_number_of_likes">Number of Likes</string>
    <string name="contentDescription_previous_post_button">Previous Post Button</string>
    <string name="contentDescription_user_profile_picture_frame">User Profile Picture Frame</string>
    <string name="contentDescription_recenter_map_button">Recentre Map Button</string>
    <string name="contentDescription_user_follow_status">User Follow Status</string>
    <string name="contentDescription_delete_follow_request_button">Delete Follow Request Button</string>
    <string name="contentDescription_add_comment_button">Add Comment Button</string>
    <string name="contentDescription_post_comment_button">Post Comment Button</string>
    <string name="contentDescription_unfollow_user_button">Unfollow User Button</string>
    <string name="contentDescription_post_location_button">Post Location Button</string>
    <string name="contentDescription_accept_follow_request_button">Accept Follow Request Button</string>
    <string name="contentDescription_send_follow_request_button">Send Follow Request Button</string>
    <string name="contentDescription_next_post_button">Next Post Button</string>
    <string name="contentDescription_set_location_button">Set Location Button</string>
    <string name="contentDescription_album_artwork_frame">Album Artwork Frame</string>
    <string name="contentDescription_play_button">Play Button</string>
    <string name="contentDescription_share_button">Share Button</string>
    <string name="contentDescription_post_button">Post Button</string>
    <string name="contentDescription_private_profile">Private Profile Icon</string>
    <string name="contentDescription_feed_button">Feed Button</string>
    <string name="contentDescription_map_button">Map Button</string>
    <string name="placeholder_140_chars">__________________________________________________________________________________________________________________________________________________________</string>
    <string name="private_profile_warning">This user\'s privacy settings prevent you from seeing all of their profile. Send them a follow request!</string>
    <string name="search_title">Search</string>
    <string name="placeholder_100">100</string>
    <string name="title_posts">Posts</string>
    <string name="title_followers">Followers</string>
    <string name="title_following">Following</string>
    <string name="contentDescription_spotify_button">Listen on Spotify</string>
    <string name="post_privacy_public">Public</string>
    <string name="post_privacy_title">Post Privacy</string>
    <string name="post_privacy_friends"><![CDATA[Followers & Friends]]></string>
    <string name="post_privacy_followers">Followers Only</string>
    <string name="post_privacy_private">Private</string>
    <string name="contentDescription_more_button">More Button</string>
    <string name="navigation_option_notifications">Notifications</string>
    <string name="SpotifyClientID">545852d2c2254ee0b3acd73f4a1c486a</string>
    <string name="SpotifyClientSecret">6735a62241be4d4e84df09ba42f64e11</string>

    <string-array name="post_privacy_descs">
        <item>All Hear Here users can see this post.\n\nUsers who are not Facebook friends will see a nearby dummy location.</item>
        <item>Your Facebook friends, Hear Here followers, and tagged Hear Here users can see this post.\n\nUsers who are not Facebook friends will see a nearby dummy location.</item>
        <item>Only your Hear Here followers and tagged Hear Here users can see this post.\n\nUsers who are not Facebook friends will see a nearby dummy location.</item>
        <item>Only you and tagged Hear Here users can see this post.</item>
    </string-array>

    <string-array name="profile_privacy_descs">
        <item>All Hear Here users can see follower lists and number of posts.</item>
        <item>Facebook friends and Hear Here followers can see follower lists and number of posts.</item>
        <item>Only Hear Here followers can see follower lists and number of posts.</item>
    </string-array>

    <string-array name="search_privacy_descs">
        <item>Profile shows up in search results of all Hear Here users.</item>
        <item>Profile shows up in search results of Facebook friends on Hear Here only.</item>
        <item>Profile does not show up in search results of any users.</item>
    </string-array>

    <string-array name="auto_accept_descs">
        <item>All follow requests must be accepted manually.</item>
        <item>Facebook friends are accepted as followers automatically. Other follow requests must be accepted manually.</item>
        <item>All follow requests are automatically accepted.</item>
    </string-array>

</resources>