<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:appNamespace="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".Activities.HolderActivity">
      <item android:id="@+id/action_post"
            android:title="@string/action_create_post"
            android:icon="@drawable/add_post"
            appNamespace:showAsAction="ifRoom"
          />
      <item android:id="@+id/action_user_requests"
            android:title="@string/action_user_requests"
            android:icon="@drawable/add_user_empty"
            appNamespace:showAsAction="ifRoom"
          />
      <item android:id="@+id/action_friends"
            android:title="@string/action_friends"
            android:icon="@drawable/friends_empty"
            appNamespace:showAsAction="ifRoom"
          />
      <!--<item android:id="@+id/search"
            android:title="Search"
            android:icon="@android:drawable/ic_menu_search"
            appNamespace:showAsAction="collapseActionView|ifRoom"
            appNamespace:actionViewClass="android.support.v7.widget.SearchView" />-->
      <item android:id="@+id/action_reset_database"
            android:title="@string/action_reset_databse"
            android:orderInCategory="99"
            appNamespace:showAsAction="never"/>

      <item android:id="@+id/action_settings"
            android:title="@string/action_settings"
            android:orderInCategory="100"
            appNamespace:showAsAction="never"/>

</menu>
