<?xml version="1.0" encoding="utf-8"?>

<GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AddressPicker"
    android:columnCount="4"
    android:rowCount="5">

    <TextView
        android:layout_row="0"
        android:layout_column="0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/address_picker_location"/>

    <yosoyo.aaahearhereprototype.ZZZInterface.InstantAutoCompleteTextView
        android:layout_row="0"
        android:layout_column="1"
        android:id="@+id/address_picker_txtLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:hint="@string/address_picker_txtLocation_hint"
        android:inputType="textCapSentences"/>

    <ToggleButton
        android:id="@+id/address_picker_btnLocation"
        android:layout_row="0"
        android:layout_column="2"
        android:scaleType="fitXY"
        android:layout_height="30dp"
        android:layout_width="30dp"
        android:background="@drawable/ic_tick_toggle"
        android:textOn=""
        android:textOff=""
        android:checked="false"
        />

    <TextView
        android:layout_row="1"
        android:layout_column="0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/address_picker_street"/>

    <EditText
        android:layout_row="1"
        android:layout_column="1"
        android:id="@+id/address_picker_txtStreet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:hint="@string/address_picker_txtStreet_hint"
        android:enabled="false"/>

    <ToggleButton
        android:id="@+id/address_picker_btnStreet"
        android:layout_row="1"
        android:layout_column="2"
        android:scaleType="fitXY"
        android:layout_height="30dp"
        android:layout_width="30dp"
        android:background="@drawable/ic_tick_toggle"
        android:textOn=""
        android:textOff=""
        android:checked="true"
        />

    <TextView
        android:layout_row="2"
        android:layout_column="0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/address_picker_locality"/>

    <EditText
        android:layout_row="2"
        android:layout_column="1"
        android:id="@+id/address_picker_txtLocality"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:hint="@string/address_picker_txtLocality_hint"
        android:enabled="false"/>

    <ToggleButton
        android:id="@+id/address_picker_btnLocality"
        android:layout_row="2"
        android:layout_column="2"
        android:scaleType="fitXY"
        android:layout_height="30dp"
        android:layout_width="30dp"
        android:background="@drawable/ic_tick_toggle"
        android:textOn=""
        android:textOff=""
        android:checked="false"
        />

    <TextView
        android:layout_row="3"
        android:layout_column="0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/address_picker_country"/>

    <EditText
        android:layout_row="3"
        android:layout_column="1"
        android:id="@+id/address_picker_txtCountry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:hint="@string/address_picker_txtCountry_hint"
        android:enabled="false"/>

    <ToggleButton
        android:id="@+id/address_picker_btnCountry"
        android:layout_row="3"
        android:layout_column="2"
        android:scaleType="fitXY"
        android:layout_height="30dp"
        android:layout_width="30dp"
        android:background="@drawable/ic_tick_toggle"
        android:textOn=""
        android:textOff=""
        android:checked="false"
        />

    <TextView
        android:id="@+id/address_picker_txtOutput"
        android:layout_gravity="center_vertical"
        android:layout_row="4"
        android:layout_column="0"
        android:layout_columnSpan="3"
        android:text="@string/placeholder_location"
        android:layout_marginLeft="5dp"
        />

    <ImageButton
        android:id="@+id/address_picker_btnContinue"
        android:layout_gravity="center_vertical"
        android:layout_row="4"
        android:layout_column="3"
        android:scaleType="fitXY"
        android:layout_height="30dp"
        android:layout_width="30dp"
        android:src="@drawable/send"
        android:background="@android:color/transparent"
        android:contentDescription="@string/contentDescription_set_location_button"
        />

</GridLayout>
