<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/adam_theme_black"
    android:layout_height="wrap_content"
    android:layout_width="match_parent">

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        android:columnCount="4"
        android:rowCount="5">

        <TextView
            android:layout_row="0"
            android:layout_column="0"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="@string/address_picker_location"
            android:textColor="@color/adam_theme_grey"/>

        <com.yosoyo.aaahearhereprototype.ZZZInterface.InstantAutoCompleteTextView
            android:layout_row="0"
            android:layout_column="1"
            android:id="@+id/fragment_address_picker_txtLocation"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:hint="@string/address_picker_txtLocation_hint"
            android:inputType="textCapSentences"
            android:textColor="@color/adam_theme_light"
            android:layout_width="wrap_content"
            android:maxWidth="200dp"
            android:maxLines="1"/>

        <ToggleButton
            android:id="@+id/fragment_address_picker_btnLocation"
            android:layout_row="0"
            android:layout_column="2"
            android:scaleType="fitXY"
            android:layout_height="30dp"
            android:layout_width="30dp"
            android:background="@drawable/ic_tick_toggle"
            android:textOn=""
            android:textOff=""
            android:checked="false"
            android:backgroundTint="@color/adam_theme_base"/>

        <ProgressBar
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:id="@+id/fragment_address_picker_txtLocationProgressBar"
            android:layout_row="0"
            android:layout_column="3"
            android:layout_gravity="center"/>

        <TextView
            android:layout_row="1"
            android:layout_column="0"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="@string/address_picker_street"
            android:textColor="@color/adam_theme_grey"/>

        <EditText
            android:layout_row="1"
            android:layout_column="1"
            android:id="@+id/fragment_address_picker_txtStreet"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:hint="@string/address_picker_txtStreet_hint"
            android:enabled="false"
            android:textColor="@color/adam_theme_light"
            android:layout_width="wrap_content"
            android:maxLines="1"
            android:maxWidth="200dp"/>

        <ToggleButton
            android:id="@+id/fragment_address_picker_btnStreet"
            android:layout_row="1"
            android:layout_column="2"
            android:scaleType="fitXY"
            android:layout_height="30dp"
            android:layout_width="30dp"
            android:background="@drawable/ic_tick_toggle"
            android:textOn=""
            android:textOff=""
            android:checked="true"
            android:backgroundTint="@color/adam_theme_base"/>

        <TextView
            android:layout_row="2"
            android:layout_column="0"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="@string/address_picker_locality"
            android:textColor="@color/adam_theme_grey"/>

        <EditText
            android:layout_row="2"
            android:layout_column="1"
            android:id="@+id/fragment_address_picker_txtLocality"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:hint="@string/address_picker_txtLocality_hint"
            android:enabled="false"
            android:textColor="@color/adam_theme_light"
            android:layout_width="wrap_content"
            android:maxLines="1"
            android:maxWidth="200dp"/>

        <ToggleButton
            android:id="@+id/fragment_address_picker_btnLocality"
            android:layout_row="2"
            android:layout_column="2"
            android:scaleType="fitXY"
            android:layout_height="30dp"
            android:layout_width="30dp"
            android:background="@drawable/ic_tick_toggle"
            android:textOn=""
            android:textOff=""
            android:checked="false"
            android:backgroundTint="@color/adam_theme_base"/>

        <TextView
            android:layout_row="3"
            android:layout_column="0"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="@string/address_picker_country"
            android:textColor="@color/adam_theme_grey"/>

        <EditText
            android:layout_row="3"
            android:layout_column="1"
            android:id="@+id/fragment_address_picker_txtCountry"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:hint="@string/address_picker_txtCountry_hint"
            android:enabled="false"
            android:textColor="@color/adam_theme_light"
            android:layout_width="wrap_content"
            android:maxLines="1"
            android:maxWidth="200dp"/>

        <ToggleButton
            android:id="@+id/fragment_address_picker_btnCountry"
            android:layout_row="3"
            android:layout_column="2"
            android:scaleType="fitXY"
            android:layout_height="30dp"
            android:layout_width="30dp"
            android:background="@drawable/ic_tick_toggle"
            android:textOn=""
            android:textOff=""
            android:checked="false"
            android:backgroundTint="@color/adam_theme_base"/>

        <TextView
            android:id="@+id/fragment_address_picker_txtOutput"
            android:layout_gravity="center_vertical"
            android:layout_row="4"
            android:layout_column="0"
            android:layout_columnSpan="3"
            android:text="@string/placeholder_location"
            android:layout_marginLeft="5dp"
            android:textColor="@color/adam_theme_light"
            android:maxWidth="240dp"/>

        <ImageButton
            android:id="@+id/fragment_address_picker_btnContinue"
            android:layout_gravity="center_vertical"
            android:layout_row="4"
            android:layout_column="3"
            android:scaleType="fitXY"
            android:layout_height="30dp"
            android:layout_width="30dp"
            android:src="@drawable/send"
            android:background="@android:color/transparent"
            android:contentDescription="@string/contentDescription_set_location_button"
            android:tint="@color/adam_theme_base"/>

    </GridLayout>

</LinearLayout>
