<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="horizontal"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:paddingTop="5dp"
              android:paddingBottom="5dp"
              android:gravity="center_vertical"
              android:background="@color/adam_theme_black"
    >

    <FrameLayout
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="right"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="5dp"
        >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/like_full"
            android:contentDescription="@string/contentDescription_number_of_likes"
            android:tint="@color/adam_theme_base"/>

        <TextView
            android:id="@+id/list_row_comment_like_txtNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="1dp"
            android:layout_gravity="center"
            android:text="@string/placholder_num_likes"
            android:textSize="8sp"
            android:textColor="@color/adam_theme_black"/>

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp">

        <TextView
            android:id="@+id/list_row_comment_like_txtLikers"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="10dp"
            android:text="@string/placeholder_likers"
            android:textColor="@color/adam_theme_lightest"/>

    </LinearLayout>

</LinearLayout>